Temporarily remove script root reference in base.html

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,8 +11,8 @@
     <script src="{{ url_for('static', filename='js/jquery-1.9.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jquery-ui-1.10.3.min.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <script type=text/javascript>$SCRIPT_ROOT={{ request.script_root|tojson|safe }};</script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/templatestyle.css') }}">
+{#    <script type=text/javascript>$SCRIPT_ROOT={{ request.script_root|tojson|safe }};</script>#}
     {% block head %}{% endblock head%}
 </head>
 <body>
