Changed website template

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "template.html" %}
 {% block content %}
     <p>
         A blog documenting the processes and some programming is in the works./n
