Finish template change, removed extra files

--- a/app/templates/testtemplate.html
+++ b/app/templates/testtemplate.html
@@ -1,5 +1,5 @@
-{#base.html defines a standard layout with a sidebar, styling ...#}
-{% extends "base.html" %}
+{#template.html defines a standard layout with a sidebar, styling ...#}
+{% extends "template.html" %}
 
 {#Double brackets {{  }} print the contained Python variable#}
 
