Change css from image references to native css3

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,7 @@
 {% extends "template.html" %}
 {% block content %}
-
         <div id="right">
-            <h1>Company News</h1>
+            <h1>Latest Posts</h1>
             <div class="tit_bot">
                 <div class="right_b">
                     <span class="col_b">Maecenas sed lorem neque. Mauris dictum varius orci, sagittis auctor sapien sagittis vitae. </span><br/>
