--- a/app/static/css/tmplstyle.css
+++ b/app/static/css/tmplstyle.css
@@ -26,7 +26,9 @@ a:hover {
 
 body {
     font:12px Arial, Helvetica, sans-serif;
-    color:#000;background:url(../img/lyout/bg.jpg) top repeat-x ;
+    /*color:#000;background:url(../img/lyout/bg.jpg) top repeat-x ;*/
+    background: -prefix-linear-gradient(top, blue, white);
+    background: linear-gradient(to bottom, blue, white);
     margin:4px 0px 0px 0px;
     line-height:20px;
 }
@@ -34,7 +36,6 @@ body {
 #main {
     width:1016px;
     margin-left:0;
-    /*background:url(../img/lyout/main.jpg) left top no-repeat;*/
     margin:0px auto;
 }
 
@@ -42,19 +43,16 @@ body {
     width:1016px;
     padding:0;
     height:420px;
-    /*background:url(../img/lyout/big.jpg) left top no-repeat;*/
 }
 
-.inner_copy, .inner_copy a {
-    border:0;
-    float:right;
-    background:#fff;
-    color:#f00;width:50%;
-    line-height:10px;
-    font-size:10px;
-    margin:-220% 0 0 0;
-    overflow:hidden;
-    padding:0;
+#header .loginView {
+    position: absolute;
+    right: 10px;
+    top: 40px;
+    z-index: 999;
+    font-size:14px;font-family:Arial Narrow, rial, Helvetica, sans-serif;
+    text-transform:none;
+    font-weight:100;
 }
 
 #logo {
@@ -80,6 +78,7 @@ body {
     text-transform:none;
     font-weight:100;
 }
+
 
 #buttons {
     width:1006px;
@@ -112,7 +111,13 @@ body {
 #content {
     width:1016px;
     padding:0;
-    background:url(../img/lyout/cont_mid.gif) repeat-y;
+    background-color: white;
+    border:#000924 solid thin;
+
+
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+    /*background:url(../img/lyout/cont_mid.gif) repeat-y;*/
     margin:0px 0px 0px 0px;
 }
 
@@ -184,7 +189,6 @@ body {
 #left {
     float:left;
     width:695px;
-    /*background:url(../img/lyout/bg_left.jpg) left 25px repeat-x;*/
     margin-left:0;
     padding:0px 0px 0px 0px;
 }
@@ -195,13 +199,13 @@ body {
 }
 
 .top {
-    background:url(../img/lyout/cont_top.gif) top no-repeat;
+    /*background:url(../img/lyout/cont_top.gif) top no-repeat;*/
     width:996px;
     padding:5px 5px 0 15px;
 }
 
 .bot {
-    background:url(../img/lyout/cont_bot.gif) left bottom no-repeat;
+    /*background:url(../img/lyout/cont_bot.gif) left bottom no-repeat;*/
     width:1016px;
     height:10px;
 }
