--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,13 +18,13 @@
         <div id="left">
             <h2>Maecenas sed lorem neque</h2>
             <div class="text">
-                <img src="{{ url_for('static', filename='img/lyout/img1.jpg') }}" width="202" height="150" class="img" alt="" /><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus condimentum pharetra. Nunc et augue sed ligula dictum ultricies. </span><br/>
+                <img src="{{ url_for('static', filename='img/lyout/img1.jpg') }}" width="202" height="150" class="imgFloat" alt="" /><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus condimentum pharetra. Nunc et augue sed ligula dictum ultricies. </span><br/>
                 In hendrerit blandit nisi ullamcorper pretium. Pellentesque tristique, diam sollicitudin condimentum dignissim, lorem urna cursus mi, quis iaculis est dolor ac purus. Nunc facilisis dictum neque eu sollicitudin. Nulla luctus, erat sed hendrerit facilisis, erat enim viverra nulla, eu blandit nisi lacus vel velit. Vestibulum eros tortor, aliquet ac elementum vel, aliquet eget purus. Morbi nisi leo, tristique vitae iaculis a, vehicula ut nulla. Pellentesque sit amet leo dolor, ac varius mi. Aenean nulla metus, laoreet nec tincidunt quis, ultrices quis leo. Vivamus viverra magna sit amet turpis hendrerit vitae blandit ligula. tempus. Maecenas imperdiet, nisl sed congue eleifend, orci quam. <br/>
                  <div class="read"><a href="#"><img src="{{ url_for('static', filename='img/lyout/b_read.gif') }}" alt="" /></a></div>
             </div>
             <h2>Free Website Templates</h2>
             <div class="text">
-                <img src="{{ url_for('static', filename='img/lyout/img2.jpg') }}" width="152" height="102" class="img" alt="" /><span>Aliquam sed elit orci, vitae iaculis velit. Donec viverra consectetur suscipit. Maecenas lacinia augue eu magna interdum at tincidunt risus tincidunt. </span><br/>
+                <img src="{{ url_for('static', filename='img/lyout/img2.jpg') }}" width="152" height="102" class="imgFloat" alt="" /><span>Aliquam sed elit orci, vitae iaculis velit. Donec viverra consectetur suscipit. Maecenas lacinia augue eu magna interdum at tincidunt risus tincidunt. </span><br/>
                 Etiam condimentum, ligula id pretium commodo, eros nunc convallis augue, vel consequat sapien orci id massa. Aliquam porta rutrum ante, sit amet lobortis orci cursus at. Suspendisse sollicitudin velit in magna rutrum suscipit. Nunc malesuada risus et ante pulvinar tincidunt. Sed ac imperdiet elit. Integer bibendum fermentum ligula, quis sollicitudin turpis convallis ac. Duis<br/>
                 purus. Morbi nisi leo, tristique vitae iaculis a, vehicula ut nulla. Pellentesque sit amet leo dolor, ac varius mi. Aenean nulla metus, laoreet nec tincidunt quis, ultrices quis leo. Vivamus viverra magna sit amet turpis hendrerit vitae blandit ligula. tempus. Maecenas imperdiet, nisl sed congue eleifend, orci quam. <br/>
                 <div class="read"><a href="#"><img src="{{ url_for('static', filename='img/lyout/b_read.gif') }}" alt="" /></a></div><br/>
