--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,30 +4,58 @@
             <h1>Latest Posts</h1>
             <div class="tit_bot">
                 <div class="right_b">
-                    <span class="col_b">Maecenas sed lorem neque. Mauris dictum varius orci, sagittis auctor sapien sagittis vitae. </span><br/>
-                    Suspendisse placerat ante non lectus gravida imperdiet. Fusce vitae vulputate tellus. Morbi pulvinar consequat felis ut consequat. Nunc pellentesque imperdiet...
+                    <span class="col_b">{{ post0Title }}</span><br/>
+                        {{ post0Body|safe }}
                 </div>
                 <div class="read"><a href="#"><img src="{{ url_for('static', filename='img/lyout/b_read.gif')}}" alt="" /></a></div>
                 <div class="right_b">
-                    <span class="col_b">Maecenas sed lorem neque. Mauris dictum varius orci, sagittis auctor sapien sagittis vitae. </span><br/>
-                    Suspendisse placerat ante non lectus gravida imperdiet. Fusce vitae vulputate tellus. Morbi pulvinar consequat felis ut consequat. Nunc pellentesque imperdiet...
+                    <span class="col_b">{{ post1Title }}</span><br/>
+                    {{ post1Body|safe }}
                 </div>
                 <div class="read"><a href="#"><img src="{{ url_for('static', filename='img/lyout/b_read.gif') }}" alt="" /></a></div>
             </div><br/>
         </div>
         <div id="left">
-            <h2>Maecenas sed lorem neque</h2>
+            <h2>Continously Improving Terrain Model</h2>
             <div class="text">
-                <img src="{{ url_for('static', filename='img/lyout/img1.jpg') }}" width="202" height="150" class="imgFloat" alt="" /><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus condimentum pharetra. Nunc et augue sed ligula dictum ultricies. </span><br/>
-                In hendrerit blandit nisi ullamcorper pretium. Pellentesque tristique, diam sollicitudin condimentum dignissim, lorem urna cursus mi, quis iaculis est dolor ac purus. Nunc facilisis dictum neque eu sollicitudin. Nulla luctus, erat sed hendrerit facilisis, erat enim viverra nulla, eu blandit nisi lacus vel velit. Vestibulum eros tortor, aliquet ac elementum vel, aliquet eget purus. Morbi nisi leo, tristique vitae iaculis a, vehicula ut nulla. Pellentesque sit amet leo dolor, ac varius mi. Aenean nulla metus, laoreet nec tincidunt quis, ultrices quis leo. Vivamus viverra magna sit amet turpis hendrerit vitae blandit ligula. tempus. Maecenas imperdiet, nisl sed congue eleifend, orci quam. <br/>
-                 <div class="read"><a href="#"><img src="{{ url_for('static', filename='img/lyout/b_read.gif') }}" alt="" /></a></div>
+                <img src="{{ url_for('static', filename='img/lyout/img1.jpg') }}"
+                     width="202" height="150" class="imgFloat" alt="" />
+                <span>
+                    The best available terrain information is processed to create a hydrologically correct moedel
+                    that can be used for a variety of applications.
+                </span><br/>
+                Elevation models available from NASA and the USGS are saved as raster images.  Where available,
+                LIDAR data is used to create locally high resolution models. Additionally, hydrologic
+                vector features are used to further process the model to create a hydrologically correct elevation
+                model.  The result is a world wide coverage digital elevation model that is continuously being refined
+                and is served as a web map tile service.  The DEM can be used for a variety of applications including
+                disaster response, watershed analysis, and preliminary infrastructure design.
+                <br/>
+                 <div class="read">
+                     <a href="#"><img src="{{ url_for('static', filename='img/lyout/b_read.gif') }}" alt="" /></a>
+                 </div>
             </div>
-            <h2>Free Website Templates</h2>
+            <h2>Terrain Based Applications</h2>
             <div class="text">
-                <img src="{{ url_for('static', filename='img/lyout/img2.jpg') }}" width="152" height="102" class="imgFloat" alt="" /><span>Aliquam sed elit orci, vitae iaculis velit. Donec viverra consectetur suscipit. Maecenas lacinia augue eu magna interdum at tincidunt risus tincidunt. </span><br/>
-                Etiam condimentum, ligula id pretium commodo, eros nunc convallis augue, vel consequat sapien orci id massa. Aliquam porta rutrum ante, sit amet lobortis orci cursus at. Suspendisse sollicitudin velit in magna rutrum suscipit. Nunc malesuada risus et ante pulvinar tincidunt. Sed ac imperdiet elit. Integer bibendum fermentum ligula, quis sollicitudin turpis convallis ac. Duis<br/>
-                purus. Morbi nisi leo, tristique vitae iaculis a, vehicula ut nulla. Pellentesque sit amet leo dolor, ac varius mi. Aenean nulla metus, laoreet nec tincidunt quis, ultrices quis leo. Vivamus viverra magna sit amet turpis hendrerit vitae blandit ligula. tempus. Maecenas imperdiet, nisl sed congue eleifend, orci quam. <br/>
-                <div class="read"><a href="#"><img src="{{ url_for('static', filename='img/lyout/b_read.gif') }}" alt="" /></a></div><br/>
+                <img src="{{ url_for('static', filename='img/lyout/img2.jpg') }}"
+                     width="152" height="102" class="imgFloat" alt="" />
+                <span>
+                    Preliminary infrastructure design is possible with the digital terrain map maintained by
+                    Open Terrain Map.  The first design generation algorithms are being built for gravity fed
+                    drinking water supply systems and low bore sanitary sewer systems.
+                </span>
+                <br/>
+                Where the elevation model does not provide adequate resolution, the best available model
+                is resampled using a spline technique to allow for a reasonably high resolution with which
+                to produce a preliminary design for small scale infrstructure projects.  The idea was focused
+                on projects in the developing world but it would likely be useful rural and small town projects
+                as well.  The goal is to take the focus off the technical aspects of infrastructure design and
+                put the focus on the more important aspects for the sustainability of the project which is the
+                financial and logistic orgnaization of the project.
+                <br/>
+                <div class="read">
+                    <a href="#"><img src="{{ url_for('static', filename='img/lyout/b_read.gif') }}" alt="" /></a>
+                </div>
             </div>
         </div><br/>
         <div style="clear: both"></div>
