Add test get raster capability

--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         {% if title %}
-        <title>Web Based Infrastructure Design - {{title}}</title>
+            <title>Open Terrain Map - {{title}}</title>
         {% else %}
-        <title>Web Based Infrastructure Design</title>
+            <title>Open Terrain Map</title>
         {% endif %}
         <link rel="stylesheet" href="{{ url_for('static', filename='css/jquery-ui-1.10.3.min.css') }}">
         <script src="{{ url_for('static', filename='js/jquery-1.9.1.min.js') }}"></script>
