--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -152,21 +152,21 @@
                                 <input type="button" value="Zoom To Location" onclick="zoomToLocation();" /><br />
                                 <label id="zoomToError" style="color:red;">&nbsp;</label><br />
                                 <input type="radio" id="DONE_set_extent_radio" name="set_extent_radio" checked="checked"
-                                        onchange='app.extentLayer.radioChanged();' style='display: none;'/>
+                                         style='display: none;'/>
                                 <label for="DONE_set_extent_radio">
                                     <img src="{{ url_for('static', filename='img/icons/DONE_on.png') }}"
                                             alt="Set Extent Done" title='Deactivate Extent Tools'
                                             id='DONE_set_extent_radio_imgLabel' style='margin: 3px;'>
                                 </label>
                                 <input type="radio" id="POLYGON_set_extent_radio" name="set_extent_radio"
-                                        onchange='app.extentLayer.radioChanged();' style='display: none;'/>
+                                        style='display: none;'/>
                                 <label for="POLYGON_set_extent_radio">
                                     <img src="{{ url_for('static', filename='img/icons/POLYGON_off.png') }}"
                                             alt="Set Extent"  title='Draw Extent Feature'
                                             id='POLYGON_set_extent_radio_imgLabel' style='margin: 3px;'>
                                 </label>
                                 <input type="radio" id="MODIFY_set_extent_radio" name="set_extent_radio"
-                                        onchange='app.extentLayer.radioChanged();' style='display: none;'/>
+                                         style='display: none;'/>
                                 <label for="MODIFY_set_extent_radio">
                                     <img src="{{ url_for('static', filename='img/icons/MODIFY_off.png') }}"
                                             alt="Set Extent" title='Modify existing extent'
@@ -174,7 +174,7 @@
                                 </label>
                                 <img src="{{ url_for('static', filename='img/icons/DELETE_on.png') }}"
                                     alt="Del Extent" title='Clear extent' style='margin: 3px;'
-                                        onclick="app.extentLayer.clearExtent();">
+                                        id="CLEAR_set_extent_radio">
                                 <br/>
                             </div>
                         </div>
@@ -199,7 +199,6 @@
                                     style="width:160px;"
                                     data-dojo-type="dijit/form/HorizontalSlider"
                                     data-dojo-props='value:0, minimum: 0, maximum:100,
-                                    onChange:function(val){ if (!app.extentLayer.demImage) {return;} app.extentLayer.demImage.setOpacity(val / 100); },
                                     showButtons:true,
                                     intermediateChanges:false,
                                     discreteValues: 5,
